Added Command Line Support
Added support for command line parameters.  Enabling the DebugMode option will pop a MessageBox on startup for attaching a debugger, as well as showing a partial log in the main UI.  Command line parsing is handled by Mono.Options.

--- a/WpfSampler/Views/MainWindow.xaml
+++ b/WpfSampler/Views/MainWindow.xaml
@@ -111,7 +111,7 @@
         </DockPanel>
 
         <!-- Log Output -->
-        <DockPanel x:Name="LogOutputPanel" Grid.Row="2" Grid.Column="0">
+        <DockPanel x:Name="LogOutputPanel" Grid.Row="2" Grid.Column="0" Visibility="{Binding DebugMode, Converter={StaticResource BooleanToVisibilityConverter}}">
             <TextBlock x:Name="LogOutputLabel" DockPanel.Dock="Top" Style="{StaticResource ControlLabelStyle}" Text="Log Output:"/>
             <TextBox x:Name="LogOutputTextBox" MinHeight="100" Margin="0,0,0,20"/>
         </DockPanel>
